<resources>
    <string name="app_name" translatable="false">Keep Distance</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="pay_roll">Payroll</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_the_task">Welcome to The Application</string>
    <string name="title_activity_login">Sign in</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="connection_error">Connection error!</string>
    <string name="required_field">Required field!</string>
    <string name="change_language">Change language</string>
    <string name="english">English</string>
    <string name="choose_language">Choose language</string>
    <string name="arabic">اللغة العربية</string>


    <!-- Strings for camera settings. -->
    <string name="pref_category_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>

    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
    <string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
    <string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
    <string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
    <string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>

    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>
    <string name="prompt_searching">Searching&#8230;</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="product_search_button">Search object</string>

    <string name="qr_code">QR code</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="notifications">Notifications</string>
    <string name="quarantine_hospital">Quarantine hospital</string>
    <string name="warning_message">You are near a location that was reported was an infected case before\nTake care</string>
    <string name="unknown_location">Unknown location</string>
    <string name="not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="user_name">User name</string>


    <!-- Error strings -->
    <string name="geofence_not_available" translatable="false">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences" translatable="false">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents" translatable="false">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error" translatable="false">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type" translatable="false">
        Geofence transition error: invalid transition type %1$d
    </string>


    <!-- Transition type strings -->
    <string name="geofence_transition_entered" translatable="false">Entered</string>
    <string name="geofence_transition_exited" translatable="false">Exited</string>
    <string name="unknown_geofence_transition" translatable="false">Unknown Transition</string>

    <string name="geofence_transition_notification_text" translatable="false">
        Click notification to return to app
    </string>

    <string name="pleaseOpenGPS">Open GPS</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

</resources>
